--- a/style.css
+++ b/style.css
@@ -16,5 +16,13 @@ background: white;
 display: flex;
 align-items: center;
 justify-content: center;
-opacity: 0.6;
+opacity: 0.9;
+}
+
+
+/*card*/
+.card{
+    height: 300px;
+    width: auto;
+    
 }
