--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ h2{
     margin-left: -140px;
 }
 
+
+/*div containing the image and details*/
 #container{
     height: 500px;
     width: 300px;
@@ -24,13 +26,15 @@ opacity: 0.9;
 }
 
 
-/*card*/
+/*card- image*/
 .card{
     height: 300px;
     margin-top: 10px;
     margin-left: 30px;
 }
 
+
+/*likesection*/
 .like{
     margin-top: 190px;
     margin-left: -140px;
