--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ opacity: 0.9;
     color:black;
     width: 150px;
     height: 40px;
+    margin-left: -10px;
 align-items: center;
 border-radius: 10px;
 cursor: grab;
