--- a/style.css
+++ b/style.css
@@ -96,3 +96,11 @@ cursor: pointer;
 .post:active{
     transform: translate(0,0.3rem);
 }
+
+
+.input{
+margin-bottom: 10px;
+margin-left: -50px;
+height: 30px;
+width: 200px;
+}
