--- a/style.css
+++ b/style.css
@@ -1,106 +1,109 @@
-body{
-background-image: url(boyshoe.jpeg);
-}
-h1{
-    text-align: center;
-    font-style: oblique;
-    
+body {
+  background-image: url(images/boyshoe.jpeg);
 }
 
+h1 {
+  text-align: center;
+  font-style: oblique;
 
-h2{
-
-    margin-top: 370px;
-    margin-left: -140px;
 }
 
-#container{
-    height: 500px;
-    width: 300px;
-    margin: 0 auto;
-background: white;
-display: flex;
-opacity: 0.9;
+
+h2 {
+
+  margin-top: 370px;
+  margin-left: -140px;
+}
+
+#container {
+  height: 500px;
+  width: 300px;
+  margin: 0 auto;
+  background: white;
+  display: flex;
+  opacity: 0.9;
 }
 
 
 /*card*/
-.card{
-    height: 300px;
-    margin-top: 10px;
-    margin-left: 30px;
+.card {
+  height: 300px;
+  margin-top: 10px;
+  margin-left: 30px;
 }
 
-.like{
-    margin-top: 190px;
-    margin-left: -140px;
+.like {
+  margin-top: 190px;
+  margin-left: -140px;
 }
 
 
 .like-button {
-    animation-fill-mode:backwards;
-    color:gold;
-    font-size: 2rem;
-    border: none;
-    background: none;
-    transition: color 300ms;
-    cursor: pointer;
-    margin-top: 190px;
-  }
-  
-  .like-button:hover {
-    color:goldenrod;
-  }
-  
-  .like-button:active {
-    color: goldenrod;
-  }
-  
-  .like-button:focus {
-    outline: none;
-  }
-
-
-
-
-  .likes-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-  }
-  
-  .likes {
-    font-size: 0.9rem;
-    font-weight: 600;
-  }
-
-  .myForm{
-    margin-top: 380px;
-  }
-  
-  .post{
-    background-color: gold;
-    color:black;
-    width: 150px;
-    height: 40px;
-    margin-left: -50px;
-align-items: center;
-border-radius: 10px;
-cursor: pointer;
-
+  animation-fill-mode: backwards;
+  color: gold;
+  font-size: 2rem;
+  border: none;
+  background: none;
+  transition: color 300ms;
+  cursor: pointer;
+  margin-top: 190px;
 }
-.post:hover{
-    filter: opacity(0.7);
+
+.like-button:hover {
+  color: goldenrod;
 }
-.post:active{
-    transform: translate(0,0.3rem);
+
+.like-button:active {
+  color: goldenrod;
+}
+
+.like-button:focus {
+  outline: none;
 }
 
 
-.input{
-margin-bottom: 10px;
-margin-left: -50px;
-height: 30px;
-width: 200px;
+
+
+.likes-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.likes {
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.myForm {
+  margin-top: 380px;
+}
+
+.post {
+  background-color: gold;
+  color: black;
+  width: 150px;
+  height: 40px;
+  margin-left: -50px;
+  align-items: center;
+  border-radius: 10px;
+  cursor: pointer;
+
+}
+
+.post:hover {
+  filter: opacity(0.7);
+}
+
+.post:active {
+  transform: translate(0, 0.3rem);
+}
+
+
+.input {
+  margin-bottom: 10px;
+  margin-left: -50px;
+  height: 30px;
+  width: 200px;
 }
