--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h2 {
   transition: color 300ms;
   cursor: pointer;
   margin-top: 190px;
+  margin-left: 14px;
 }
 
 .like-button:hover {
@@ -71,13 +72,11 @@ h2 {
   padding: 0 10px;
 }
 
-.likes {
-  font-size: 0.9rem;
-  font-weight: 600;
-}
 
 #myForm {
-  margin-top: 380px;
+  height: 100px;
+  width: 300px;
+  margin-top: 300px;
 }
 
 .post {
@@ -89,6 +88,8 @@ h2 {
   align-items: center;
   border-radius: 10px;
   cursor: pointer;
+  margin-bottom: 45px;
+  margin-left: 14px;
 
 }
 
@@ -102,8 +103,8 @@ h2 {
 
 
 .input {
-  margin-bottom: 10px;
-  margin-left: -50px;
+  margin-bottom: 40px;
+  margin-left: 10pxpx;
   height: 30px;
   width: 200px;
 }
